feat: add web search tool, tool registry, and user memory support to AI service